--- a/index.html
+++ b/index.html
@@ -115,6 +115,16 @@
       }
     }
     </script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-05C3PSZCVT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-05C3PSZCVT');
+    </script>
 </head>
 <body>
 
